--- a/index.html
+++ b/index.html
@@ -1,41 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="Styles.css" />
     <title>Gimnasio</title>
+  </head>
 
-</head>
-
-<div id="contenido">
+  <div id="contenido">
     <body>
-        <div>
-            <div id="header">
-                <div class="nav-menu1">
-                    <ul>
-                        <li><a href="">Inicio</a></li>
-                        <li><a href="">Sobre Nosotros</a></li>
-                        <li><a href="">Planes</a></li>
-                    </ul>
-                </div>
-    
-                <div class="menu-icon">
-                    <a href=""></a><img src="imagenes\LogoGimnasio.png" width="120px";>
-                </div>
-    
-                <div class="nav-menu2">
-                    <ul>
-                        <li><a href="">Horarios</a></li>
-                        <li><a href="">Sedes</a></li>
-                        <li><a href="">Contáctenos</a></li>
-                    </ul>
-                </div>
-            </div>
+      <div id="header">
+        <div class="nav-menu1">
+          <ul>
+            <li><a href="">Inicio</a></li>
+            <li><a href="">Sobre Nosotros</a></li>
+            <li><a href="">Planes</a></li>
+          </ul>
         </div>
+
+        <div class="menu-icon">
+          <a href=""><img src="imagenes\LogoGimnasio.png" width="120px" ; /></a>
+        </div>
+
+        <div class="nav-menu2">
+          <ul>
+            <li><a href="">Horarios</a></li>
+            <li><a href="">Sedes</a></li>
+            <li><a href="">Contáctenos</a></li>
+          </ul>
+        </div>
+      </div>
     </body>
-</div>
-
-
+  </div>
 </html>
