fix navbar styles

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="nav-menu1">
           <ul>
             <li><a href="">Inicio</a></li>
-            <li><a href="">Sobre Nosotros</a></li>
+            <li><a href="">Nosotros</a></li>
             <li><a href="">Planes</a></li>
           </ul>
         </div>
@@ -23,7 +23,7 @@
           <a href=""><img src="imagenes\LogoGimnasio.png" width="120px" ; /></a>
         </div>
 
-        <div class="nav-menu2">
+        <div class="nav-menu1">
           <ul>
             <li><a href="">Horarios</a></li>
             <li><a href="">Sedes</a></li>
