--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <div id="header">
         <div class="nav-menu1">
           <ul>
-            <li><a href="">Inicio</a></li>
-            <li><a href="">Nosotros</a></li>
-            <li><a href="">Planes</a></li>
+            <li><a href="">Sedes</a></li>
+            <li><a href="">Horarios</a></li>
+            <li><a href="">Programas</a></li>
           </ul>
         </div>
 
@@ -25,11 +25,15 @@
 
         <div class="nav-menu1">
           <ul>
-            <li><a href="">Horarios</a></li>
-            <li><a href="">Sedes</a></li>
+            <li><a href="">Planes</a></li>
+            <li><a href="">Servicios</a></li>
             <li><a href="">Contáctenos</a></li>
           </ul>
         </div>
+      </div>
+
+      <div>
+        
       </div>
     </body>
   </div>
