--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Gimnasio</title>
   </head>
 
-  <div id="contenido">
+  <div id="background">
     <body>
       <div id="header">
         <div class="nav-menu1">
@@ -32,8 +32,8 @@
         </div>
       </div>
 
-      <div>
-        
+      <div id="container">
+        <img src="imagenes/Banner.jpg" width="1000px" height="450px" />
       </div>
     </body>
   </div>
