--- a/index.html
+++ b/index.html
@@ -34,6 +34,24 @@
 
       <div id="container">
         <img src="imagenes/Banner.jpg" width="1000px" height="450px" />
+
+        <h2>Sedes y Horarios</h2>
+        <div class="box1">
+          <a><img src="" /></a>
+          <a><img src="" /></a>
+        </div>
+
+        <h2>Programas</h2>
+        <div class="box2"></div>
+
+        <h2>Planes</h2>
+        <div class="box3"></div>
+
+        <h2>Servicios Complementarios</h2>
+        <div class="box4"></div>
+
+        <h2>Contáctenos</h2>
+        <div class="box5"></div>
       </div>
     </body>
   </div>
