--- a/index.html
+++ b/index.html
@@ -35,22 +35,22 @@
       <div id="container">
         <img src="imagenes/Banner.jpg" width="1000px" height="450px" />
 
-        <h2>Sedes y Horarios</h2>
+        <a><h2>Sedes y Horarios</h2></a>
         <div class="box1">
           <a><img src="" /></a>
           <a><img src="" /></a>
         </div>
 
-        <h2>Programas</h2>
+        <a><h2>Programas</h2></a>
         <div class="box2"></div>
 
-        <h2>Planes</h2>
+        <a><h2>Planes</h2></a>
         <div class="box3"></div>
 
-        <h2>Servicios Complementarios</h2>
+        <a><h2>Servicios Complementarios</h2></a>
         <div class="box4"></div>
 
-        <h2>Contáctenos</h2>
+        <a><h2>Contáctenos</h2></a>
         <div class="box5"></div>
       </div>
     </body>
