--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Styles.css" />
+    <link rel="stylesheet" href="index.css" />
     <title>Gimnasio</title>
   </head>
 
@@ -20,7 +20,9 @@
         </div>
 
         <div class="menu-icon">
-          <a href=""><img src="imagenes\LogoGimnasio.png" width="120px" ; /></a>
+          <a href="index.html"
+            ><img src="imagenes\LogoGimnasio.png" width="120px" ;
+          /></a>
         </div>
 
         <div class="nav-menu1">
